[package]
name = "g2g-python"
description = "Host gst-python-ml elements as first-class glass2glass elements (embedded CPython via pyo3)."
license = "LGPL-2.1-or-later"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
# `runtime` pulls the async runner + `spin` (g2g-core's `log` module needs it);
# hosting an element in a graph wants it anyway.
std = ["g2g-core/std", "g2g-core/runtime"]
# Embed CPython and host gst-python-ml element shells in-process via pyo3
# (DESIGN.md, the Python-element track). OS-coupled: needs libpython at build
# and run time, so it is off the no_std / RTOS baseline and implies std. The
# default build negotiates caps but cannot run frames (the per-frame Python
# call lives behind this feature).
python = ["std", "dep:pyo3"]

[dependencies]
g2g-core = { path = "../g2g-core" }
# Embedded CPython bridge (python feature). `auto-initialize` starts the
# interpreter on first GIL acquisition. 0.26+ supports CPython 3.14 (the Fedora
# 43 system Python). Zero-copy frame access uses the Python buffer protocol, so
# the host hands Python a writable buffer and Python's own numpy consumes it via
# `np.frombuffer`, no Rust-side numpy crate needed.
pyo3 = { version = "0.26", optional = true, features = ["auto-initialize"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
