# Standalone demo crate (M741): NOT a workspace member (see root Cargo.toml
# `exclude`). It builds against g2g as path packages and pins its own deps in a
# local Cargo.lock, so Bevy never enters the workspace build / CI.
[package]
name = "bevy-g2g-decode"
version = "0.1.0"
edition = "2021"
publish = false

# Own workspace root so cargo does not fold it into the parent workspace.
[workspace]

[dependencies]
# Bevy 0.19 pins wgpu 29, the exact version g2g uses, so Bevy's
# RenderDevice/Queue/Adapter/Instance and a g2g `wgpu::Texture` are the same
# types: the prerequisite for `GpuContext::from_wgpu` and a copy-free handoff.
bevy = "0.19"
wgpu = "29"

g2g-core = { path = "../../g2g-core", features = ["std", "runtime"] }
# ffmpeg: software H.264 decode (FfmpegH264Dec). vello-overlay: the GPU element
# that renders a raw frame into a `wgpu::Texture` on the shared device (and pulls
# in the `gpu` module). filesrc/h264parse/videoconvert/appsink are baseline.
g2g-plugins = { path = "../../g2g-plugins", features = ["std", "ffmpeg", "vello-overlay"] }
